--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">Pink</string>
+
+    <string-array name="quotes">
+        <item>“ The question isn’t who is going to let me; it’s who is going to stop me ”</item>
+        <item>“ Ah, women. They make the highs higher and the lows more frequent ”</item>
+        <item>“ Keep your heels, head, and standards high ”</item>
+        <item>“ Always be careful of what you hear about a woman. Rumors come from either a man who can’t have her or a woman who can’t compete with her ”</item>
+        <item>“ A woman is like a tea bag; you never know how strong it is until it’s in hot water ”</item>
+        <item>“ You educate a man; you educate a man. You educate a woman; you educate a generation ”</item>
+        <item>“ Above all, be the heroine of your life, not the victim ”</item>
+    </string-array>
 </resources>
